Tạo khung toàn bộ backend

--- a/pom.xml
+++ b/pom.xml
@@ -131,12 +131,26 @@
             <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.2</version> </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+<!--        jakarta.mail-api: Cung cấp API (giao diện) để viết code gửi email.
+spring-boot-starter-mail: Giúp thực hiện và tự động cấu hình việc
+gửi email trong ứng dụng Spring Boot.-->
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.security</groupId>-->
-<!--            <artifactId>spring-security-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+<!--        jakarta.mail-api là lý thuyết (các hàm có thể gọi).
+spring-boot-starter-mail là thực hành (làm cho các hàm đó chạy được
+và tự động chuẩn bị môi trường cho bạn).-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
