--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,27 +2,27 @@ spring.application.name=OperatorManagementSystem
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=false;trustServerCertificate=true;databaseName=OperatorManagementSystem
 server.port=8083
 #http://localhost:8083/swagger-ui/index.html
-# vì co cong 8080 r nen t thay bang cong 8083
+# v? co cong 8080 r nen t thay bang cong 8083
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# spring.jpa.hibernate.ddl-auto=none // có db trc r?i code sau
-# ??t m?c log m?c ??nh cho toàn b? ?ng d?ng là INFO
+# spring.jpa.hibernate.ddl-auto=none // c? db trc r?i code sau
+# ??t m?c log m?c ??nh cho to?n b? ?ng d?ng l? INFO
 logging.level.root=INFO 
 
-# ??t m?c log cho các gói c?a Spring Framework là INFO ?? th?y chi ti?t kh?i t?o
+# ??t m?c log cho c?c g?i c?a Spring Framework l? INFO ?? th?y chi ti?t kh?i t?o
 logging.level.org.springframework=INFO
 
-# ??t m?c log cho Hibernate (ph?n c?a JPA) là INFO ?? th?y chi ti?t ORM
+# ??t m?c log cho Hibernate (ph?n c?a JPA) l? INFO ?? th?y chi ti?t ORM
 logging.level.org.hibernate=INFO
 
-# ??t m?c log cho Tomcat là INFO ?? th?y chi ti?t kh?i t?o web server
+# ??t m?c log cho Tomcat l? INFO ?? th?y chi ti?t kh?i t?o web server
 logging.level.org.apache.coyote.http11=INFO
 logging.level.org.apache.catalina.startup=INFO
 
-
-
+jwt.secret=124246182494729dbsudbsds9482@qeqeqweytrsfseters
+# sever se check ma nay do t tao moi khi login neu
