--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 # spring.jpa.hibernate.ddl-auto=none // có db trc r?i code sau
@@ -23,5 +24,6 @@ logging.level.org.hibernate=INFO
 logging.level.org.apache.coyote.http11=INFO
 logging.level.org.apache.catalina.startup=INFO
 
-
+jwt.secret=124246182494729dbsudbsds9482@qeqeqweytrsfseters
+# sever se check ma nay do t tao moi khi login neu
 
