--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,26 +4,29 @@ server.port=8083
 #http://localhost:8083/swagger-ui/index.html
 # vì co cong 8080 r nen t thay bang cong 8083
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-# spring.jpa.hibernate.ddl-auto=none // có db trc r?i code sau
-# ??t m?c log m?c ??nh cho toàn b? ?ng d?ng là INFO
-logging.level.root=INFO 
-
-# ??t m?c log cho các gói c?a Spring Framework là INFO ?? th?y chi ti?t kh?i t?o
+logging.level.root=INFO
 logging.level.org.springframework=INFO
-
-# ??t m?c log cho Hibernate (ph?n c?a JPA) là INFO ?? th?y chi ti?t ORM
 logging.level.org.hibernate=INFO
-
-# ??t m?c log cho Tomcat là INFO ?? th?y chi ti?t kh?i t?o web server
 logging.level.org.apache.coyote.http11=INFO
 logging.level.org.apache.catalina.startup=INFO
-
 jwt.secret=124246182494729dbsudbsds9482@qeqeqweytrsfseters
 # sever se check ma nay do t tao moi khi login neu
+#===================================Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tranduytrung251105@gmail.com
+spring.mail.password=ymta xjjd htiz stfy 
+  # <--- ??m b?o ?ây là M?t kh?u ?ng d?ng
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+# spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com # ?ôi khi c?n thêm dòng này
+
+
 
