--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-<!--         Thymeleaf (nếu dùng HTML template) -->
+        <!--         Thymeleaf (nếu dùng HTML template) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.1.8</version> </dependency>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -137,18 +137,19 @@
         <dependency>
             <groupId>jakarta.mail</groupId>
             <artifactId>jakarta.mail-api</artifactId>
-            <version>2.1.2</version> </dependency>
+            <version>2.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-<!--        jakarta.mail-api: Cung cấp API (giao diện) để viết code gửi email.
-spring-boot-starter-mail: Giúp thực hiện và tự động cấu hình việc
-gửi email trong ứng dụng Spring Boot.-->
+        <!--        jakarta.mail-api: Cung cấp API (giao diện) để viết code gửi email.
+        spring-boot-starter-mail: Giúp thực hiện và tự động cấu hình việc
+        gửi email trong ứng dụng Spring Boot.-->
 
-<!--        jakarta.mail-api là lý thuyết (các hàm có thể gọi).
-spring-boot-starter-mail là thực hành (làm cho các hàm đó chạy được
-và tự động chuẩn bị môi trường cho bạn).-->
+        <!--        jakarta.mail-api là lý thuyết (các hàm có thể gọi).
+        spring-boot-starter-mail là thực hành (làm cho các hàm đó chạy được
+        và tự động chuẩn bị môi trường cho bạn).-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
