--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=OperatorManagementSystem
 
 # --------- DATA SOURCE (Supabase / PostgreSQL) ----------
-spring.datasource.url=jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:6543/postgres
+spring.datasource.url=jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:6543/postgres?prepareThreshold=0
 spring.datasource.username=postgres.eqkinicnhodcwcnmdpin
 spring.datasource.password=Abcabc123123.jj
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -63,7 +63,10 @@ spring.main.allow-bean-definition-overriding=true
 #Webhook công khai (Public Webhook): ??a ch? URL c?a webhook có th? ???c bi?t ??n bên ngoài.
 #Xác th?c API Key: Ch? nh?ng ng??i/h? th?ng có API Key bí m?t m?i có th? g?i d? li?u thành công.
 spring.devtools.restart.enabled=false
-# tat devtool di : devtool de k can restart ma no van cap nhat dc code ms nhat t thay no nen dung trong frontend
+# close devtool di : devtool de k can restart ma no van cap nhat dc code ms nhat t thay no nen dung trong frontend
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.datasource.hikari.auto-commit=true
+spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
 
 
 
