--- a/pom.xml
+++ b/pom.xml
@@ -80,46 +80,22 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
-            <scope>provided</scope>
-            <optional>true</optional>
         </dependency>
-
-        <!-- Spring Framework Core (KHÔNG KHAI BÁO VERSION TRỰC TIẾP) -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <!-- XÓA DÒNG <version> Ở ĐÂY ĐỂ PARENT QUẢN LÝ -->
-        </dependency>
-
-        <!-- Spring Boot Test (chỉ dùng cho test) -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>${jjwt.version}</version>
+            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>${jjwt.version}</version>
+            <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>${jjwt.version}</version>
+            <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -139,8 +115,15 @@
         spring-boot-starter-mail là thực hành (làm cho các hàm đó chạy được
         và tự động chuẩn bị môi trường cho bạn).-->
 
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.2.0.jre11</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
@@ -153,6 +136,8 @@
         </dependency>
 
     </dependencies>
+
+
 
     <build>
         <plugins>
