--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,18 @@
         <java.version>17</java.version>   <!-- JDK bạn đang chạy -->
     </properties>
 
+
+
     <dependencies>
         <!-- Spring Boot starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
         </dependency>
 
         <dependency>
