--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ logging.level.org.apache.catalina.startup=INFO
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tranduytrung251105@gmail.com
-spring.mail.password=ymta xjjd htiz stfy
+spring.mail.password=cili pfuc jrsg omze
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -46,7 +46,7 @@ app.onboarding.api-url=http://localhost:8083/api/onboarding/transport-unit-via-e
 mail.imap.host=imap.gmail.com
 mail.imap.port=993
 mail.username=tranduytrung251105@gmail.com
-mail.password=ymta xjjd htiz stfy
+mail.password=cili pfuc jrsg omze
 mail.debug=true
 
 spring.main.allow-bean-definition-overriding=true
