--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,8 +57,8 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.SQL=DEBUG
 
 # --------- HIKARI (Connection Pool) ----------
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
 spring.datasource.hikari.max-lifetime=30000
 spring.datasource.hikari.connection-timeout=20000
@@ -66,5 +66,8 @@ spring.datasource.hikari.leak-detection-threshold=15000
 spring.datasource.hikari.auto-commit=true
 spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
 #------------------
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 
