--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,4 +67,7 @@ spring.datasource.hikari.auto-commit=true
 spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
 #------------------
 
+#==================== Image ======
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+#--------------------------
 
