--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,9 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 #--------------------------
 
+#==================== Cloudinary ======
+cloudinary.cloud_name=dkb5euwxe
+cloudinary.api_key=976418171164749
+cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
+#--------------------------
+
