--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.password=AVNS_2auvNWevgluMhTwRB3Q
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+
 
 # --------- JPA / HIBERNATE ----------
 spring.jpa.hibernate.ddl-auto=update
@@ -27,6 +31,8 @@ logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
 logging.level.org.apache.coyote.http11=INFO
 logging.level.org.apache.catalina.startup=INFO
+#logging.level.org.springframework.security=DEBUG
+
 
 #=================================== Mail Configuration
 spring.mail.host=smtp.gmail.com
@@ -55,7 +61,7 @@ spring.main.allow-bean-definition-overriding=true
 # --------- DEBUG / RESTART / LOGGING ----------
 spring.devtools.restart.enabled=false
 spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 # --------- HIKARI (Connection Pool) ----------
 spring.datasource.hikari.maximum-pool-size=10
