--- a/pom.xml
+++ b/pom.xml
@@ -79,12 +79,18 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Swagger-OpenAPI -->
+        <!-- Swagger / OpenAPI 3 cho Spring Boot 3 -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.5</version>
+            <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.15</version> <!-- hoặc version mới hơn -->
+        </dependency>
+
 
         <!-- JWT -->
         <dependency>
@@ -118,6 +124,7 @@
             <artifactId>poi</artifactId>
             <version>5.2.3</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
