--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-server.port=${PORT}
+server.port=${PORT:8083}
 
 
 # --------- JWT Configuration ----------
@@ -47,8 +47,8 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # --------- Onboarding API ----------
 app.onboarding.api-key=e0a9d8c7-b6a5-4e3d-2c1b-0a9b8c7d6e5f
-app.onboarding.api-url=http://localhost:8083/api/onboarding/transport-unit-via-email
-
+#app.onboarding.api-url=http://localhost:8083/api/onboarding/transport-unit-via-email
+app.onboarding.api-url=https://operator-management-system.onrender.com/api/onboarding/transport-unit-via-email
 # --------- IMAP ----------
 mail.imap.host=imap.gmail.com
 mail.imap.port=993
