--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -96,5 +96,5 @@ cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
 #vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 ##vnpay.returnUrl=http://localhost:8083/api/payment/vnpay/return
 spring.profiles.active=dev
-
+booking.override-total=50000000
 
