--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,10 @@
         </dependency>
         <!-- tvien doc gmail -->
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-validation</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.google.apis</groupId>
