--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -99,5 +99,4 @@ booking.override-total=50000000
 #api.url=http://192.168.0.102:8888
 
 api.url=http://192.168.0.102:8888/getData
-
-
+gemini.api.key=AIzaSyBsCRtCniv62lK43cFksV5XgZfJ22ntGfE
