--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,9 +94,15 @@ cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---------------------------------------------------
 
-spring.profiles.active=dev
 booking.override-total=50000000
 #api.url=http://192.168.0.102:8888
-
-api.url=http://192.168.0.102:8888/getData
 gemini.api.key=AIzaSyBsCRtCniv62lK43cFksV5XgZfJ22ntGfE
+
+
+#------------------------------------------------------
+vietqr.bankId=MB
+vietqr.accountNumber=0123317466666
+vietqr.accountName=NGUYEN VAN PHONG
+
+#------------- xem chay property nao
+spring.profiles.active=local
