--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -96,8 +96,8 @@ cloudinary.api_secret=f-j-krlPgMSbfR0J3y15q8FiUXA
 
 booking.override-total=50000000
 #api.url=http://192.168.0.102:8888
-gemini.api.key=AIzaSyBsCRtCniv62lK43cFksV5XgZfJ22ntGfE
-
+gemini.api.key=AIzaSyAA4mDiQyeZ491aBp1uMdUKY-NwGXNt75E
+google.cloud.vision.api-key=AIzaSyBqnHKgRbUNzqhKaWPQ5bBnIWiIIlZx0oI
 
 #------------------------------------------------------
 vietqr.bankId=MB
