--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,3 +4,7 @@ google.refresh.token=1//0g1xU_CEKSxwHCgYIARAAGBASNwF-L9IrfL8RknnksuomrmzjZFLESq-
 
 google.credentials.path=credentials.json
 google.stored.credentials=tokens/StoredCredential.json
+
+# --- Onboarding API cho KHO L?U TR? (STORAGE UNIT) ---
+app.onboarding.api-url.storage-unit=http://localhost:8080/api/onboarding/storage-unit-via-email
+app.onboarding.api-key.storage-unit=e0a9d8c7-b6a5-4e3d-2c1b-0a9b8c7d6e5f
