--- a/src/main/resources/application-server.properties
+++ b/src/main/resources/application-server.properties
@@ -4,3 +4,7 @@ google.refresh.token=1//0gFsmbGnAvngdCgYIARAAGBASNwF-L9IraE7Rh4JwZfVVWfs29mLStvY
 
 google.credentials.path=credentials-server.json
 google.stored.credentials=tokens/StoredCredential-server.json
+
+# --- Onboarding API cho KHO L?U TR? (STORAGE UNIT) ---
+app.onboarding.api-url.storage-unit=https://operator-management-system.onrender.com/api/onboarding/storage-unit-via-email#
+app.onboarding.api-key.storage-unit=e0a9d8c7-b6a5-4e3d-2c1b-0a9b8c7d6e5f
