send email to sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=OperatorManagementSystem
 
 # --------- DATA SOURCE (Aiven / MySQL) ----------
-spring.datasource.url=jdbc:mysql://mysql-1fb277a1-tranduytrung251105-0d79.d.aivencloud.com:22563/defaultdb?sslMode=REQUIRED
+spring.datasource.url=jdbc:mysql://mysql-322855aa-hduy281205-23d2.c.aivencloud.com:26327/defaultdb?sslMode=REQUIRED
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_2auvNWevgluMhTwRB3Q
+spring.datasource.password=AVNS_fcUeFmot1WRUqJMwu2h
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
