--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,3 +8,5 @@ google.stored.credentials=tokens/StoredCredential.json
 # --- Onboarding API cho KHO L?U TR? (STORAGE UNIT) ---
 app.onboarding.api-url.storage-unit=http://localhost:8080/api/onboarding/storage-unit-via-email
 app.onboarding.api-key.storage-unit=e0a9d8c7-b6a5-4e3d-2c1b-0a9b8c7d6e5f
+app.onboarding.api-url=http://localhost:8080/api/onboarding/transport-unit-via-email
+app.frontend.url=${APP_FRONTEND_URL:http://localhost:5173}
