--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,8 +48,8 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # --------- Onboarding API ----------
 app.onboarding.api-key=e0a9d8c7-b6a5-4e3d-2c1b-0a9b8c7d6e5f
-#app.onboarding.api-url=http://localhost:8083/api/onboarding/transport-unit-via-email
-app.onboarding.api-url=https://operator-management-system.onrender.com/api/onboarding/transport-unit-via-email
+
+
 # --------- IMAP ----------
 mail.imap.host=imap.gmail.com
 mail.imap.port=993
@@ -105,4 +105,4 @@ vietqr.accountNumber=0123317466666
 vietqr.accountName=NGUYEN VAN PHONG
 
 #------------- xem chay property nao
-spring.profiles.active=local
+spring.profiles.active=server
