--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,7 +62,7 @@ spring.main.allow-bean-definition-overriding=true
 # --------- DEBUG / RESTART / LOGGING ----------
 spring.devtools.restart.enabled=false
 spring.jpa.properties.hibernate.use_sql_comments=true
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 # --------- HIKARI (Connection Pool) ----------
 spring.datasource.hikari.maximum-pool-size=10
