trc khi merrge hung

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -105,4 +105,4 @@ vietqr.accountNumber=0123317466666
 vietqr.accountName=NGUYEN VAN PHONG
 
 #------------- xem chay property nao
-spring.profiles.active=server
+spring.profiles.active=local
