--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -125,4 +125,4 @@ vietqr.accountNumber=0123317466666
 vietqr.accountName=NGUYEN VAN PHONG
 
 #------------- xem chay property nao
-spring.profiles.active=local
+spring.profiles.active=server
